--- a/app/src/main/res/layout/item_history_customer_drawerlayout.xml
+++ b/app/src/main/res/layout/item_history_customer_drawerlayout.xml
@@ -1,19 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20sp">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/time"
-        android:textSize="50dp"
-        android:text="Time"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rideId"
-        android:textSize="30dp"
-        android:text="RideId"/>
-</LinearLayout>
+    app:cardCornerRadius="30dp"
+    android:elevation="4dp"
+    android:padding="20sp"
+    app:cardUseCompatPadding="true">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/White"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/time"
+            android:gravity="center"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:textColor="@color/Black"
+            android:text="Time"/>
+        <TextView
+            android:layout_below="@+id/time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/rideId"
+            android:textStyle="bold"
+            android:textColor="@color/Green"
+            android:gravity="center"
+            android:textSize="25dp"
+            android:text="RideId"/>
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
