--- a/app/src/main/res/layout/all_bus_drawerlayout.xml
+++ b/app/src/main/res/layout/all_bus_drawerlayout.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="All Bus Fragment"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"
-        android:background="@color/White"
-        android:textStyle="bold"/>
+    <include layout="@layout/toolbar" />
+
+    <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/recyclerview_from_show_all_bus_fragemnt"
+       android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:foregroundGravity="center"
+        />
 
 
-</RelativeLayout>
+</LinearLayout>
